test/fail/error_coercion2.sest
module ErrorCoercion2 :> sig
  val f<$a> : fun($a) -> $a
end = struct
  let f(n) = n + 1
end
